Fix warnings found by latest version of compiler